# chimera

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
benchmarks/: benchmark_pipeline.py
chimera/: __init__.py  core.py  diarize.py  exceptions.py  irreversible.py  keygen.py  pipeline.py  presets.py  realtime.py  transform.py  types.py  vad.py
docs/: api_reference.md  architecture.md  changelog.md  index.md  quickstart.md  security.md
examples/: 01_basic_file.py  02_multi_speaker.py  03_array_api.py  04_realtime_mic.py  05_streaming.py  06_inspect_params.py
tests/: conftest.py  test_diarize.py  test_irreversible.py  test_keygen.py  test_pipeline.py  test_presets.py  test_transform.py  test_vad.py
