[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name = "chimera-voice"
version = "0.2.0"
description = "Cryptographically irreversible, speaker-aware voice anonymisation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Ohswedd" },
]
keywords = [
  "voice", "anonymisation", "privacy", "audio", "speech",
  "vocoder", "WORLD", "diarization", "ASV", "GDPR", "de-identification",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "soundfile>=0.12",
  "scikit-learn>=1.3",
  "praat-parselmouth>=0.4",
]

[project.optional-dependencies]
realtime = ["sounddevice>=0.4"]
resample = ["librosa>=0.10"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=24.0",
  "ruff>=0.3",
  "mypy>=1.8",
]
all = [
  "chimera-voice[realtime,resample,dev]",
]

[project.urls]
Homepage      = "https://github.com/Ohswedd/chimera"
Documentation = "https://github.com/Ohswedd/chimera/wiki"
Repository    = "https://github.com/Ohswedd/chimera"
Issues        = "https://github.com/Ohswedd/chimera/issues"
Changelog     = "https://github.com/Ohswedd/chimera/blob/main/CHANGELOG.md"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["chimera*"]
exclude = ["tests*", "docs*", "examples*", "benchmarks*"]

[tool.setuptools.package-data]
chimera = ["py.typed"]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py39", "py310", "py311", "py312"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "RET", "SIM"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*"    = ["S101", "ANN"]
"examples/*" = ["S101", "ANN", "T201"]

# ── MyPy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version        = "3.9"
strict                = false
warn_return_any       = false
warn_unused_configs   = true
ignore_missing_imports = true
files                 = ["chimera"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short --strict-markers"
markers      = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "realtime: marks tests requiring sounddevice",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["chimera"]
omit     = ["chimera/realtime.py"]   # requires hardware

[tool.coverage.report]
show_missing   = true
skip_covered   = false
fail_under     = 80
